tests/neg/objects-subtyping.stk
type A = object { var a: object { val x: Int }  }

type B = object { var a: object { val x: Int, var y: Int } }

def main =
  val b: B = object {
    var a = object {
      val x = 1,
      var y = 2
    }
  }

  val a: A = b                   // error
  a.a = object { val x = 5 }

  b.a.y p
